--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ build/examples/*.txt
 build/examples/*.csv
 obj/
 libs/
+build/
+gui/build-GRT-Desktop_Qt_5_5_0_clang_64bit-Debug
+gui/build-GRT-iphoneos_clang_Qt_5_5_0_for_iOS-Debug
